# optScan_Lidar_simulator

./: .gitignore
Documentation/: INF2102 - Guilherme Ferreira Gusmão - Especificações do programa.docx  INF2102 - Guilherme Ferreira Gusmão - Manual do Usuário.docx
Release/Release_optScan_v3/: PointCloud_Simulator.bat  cuda_compile_ptx_generated_phong.cu.ptx  cuda_compile_ptx_generated_triangle_mesh.cu.ptx  optScan_generated_closesthit.cu.ptx  optScan_generated_cylinder.cu.ptx  optScan_generated_exception.cu.ptx  optScan_generated_miss.cu.ptx  optScan_generated_raygeneration.cu.ptx
Scene_Builder/: .gitignore  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  Unity3D-Optix.sln  optScanExemplo.sln
Scene_Builder/Assets/: Cube.prefab
Scene_Builder/ProjectSettings/: ProjectSettings.asset
mergeVertices/: CMakeLists.txt  GENERATE_VC15_x64.bat  readme.txt
mergeVertices/dependencies/geogram/Debug/: geogram_num_3rdparty.ilk  glfw3.ilk
mergeVertices/dependencies/geogram/lib/: geogram.lib  geogram_gfx.lib  glfw3dll.lib
mergeVertices/dependencies/geogram/lib/pkgconfig/: geogram1.pc  geogram_gfx1.pc  glfw3.pc
mergeVertices/inc/: CommandConfig.h  CommandlineParser.h  PCvertice.h  merge.h  pointsHelper.h  stringHelper.h
mergeVertices/src/: CommandConfig.cpp  CommandlineParser.cpp  PCvertice.cpp  merge.cpp  mergeVertices.cpp  pointsHelper.cpp  stringHelper.cpp
optScan/: .gitignore  CMakeLists.txt  output_0.txt
optScan/Random123/: uniform.hpp
optScan/inc/: Application.h  BuffertoRender.h  CameraPathParser.h  CommandConfig.h  CommandlineParser.h  Float4Buffer.h  (+6 more)
(+35 files in other folders)
